--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </script>   
         
     <!-- Fusion Table -->
-    <script type="text/javascript" src="https://maps.google.com/maps/api/js?v=3"></script>     
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyAH3JiCLz-JTHiDwwYuxUcbYduLQV86ThE&v=3"></script>     
     <script type="text/javascript">
       function initialize() {
         google.maps.visualRefresh = true;
