--- a/index.html
+++ b/index.html
@@ -173,6 +173,19 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">
+                        <strong>Live Register Bis</strong>
+                    </h2>
+                    <hr>
+                    <iframe width="500" height="300" scrolling="no" frameborder="no" src="https://fusiontables.google.com/embedviz?q=select+col1+from+1WZkzM2NWeY_1KvLfUkibDJCl63IJBXcvYg6AWRGM+where+col5+%3E%3D+3000+and+col5+%3C%3D+4000&amp;viz=MAP&amp;h=false&amp;lat=53.71924796651665&amp;lng=-6.199967296875002&amp;t=1&amp;z=7&amp;l=col1&amp;y=2&amp;tmplt=2&amp;hml=ONE_COL_LAT_LNG"></iframe>
+               </div>
+            </div>
+        </div>
+        
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">
                         <strong>Queries</strong>
                     </h2>
                     <hr>
