--- a/index.html
+++ b/index.html
@@ -24,80 +24,15 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
-    <!-- Script to Activate the Carousel -->
-    <script>
-    $('.carousel').carousel({
-        interval: 5000 //changes the speed
-    })
-    </script>   
-        
     <!-- Fusion Table -->
     <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyAH3JiCLz-JTHiDwwYuxUcbYduLQV86ThE&v=3"></script>     
-    <script type="text/javascript">
-      function initialize() {
-        google.maps.visualRefresh = true;
-        var isMobile = (navigator.userAgent.toLowerCase().indexOf('android') > -1) ||
-          (navigator.userAgent.match(/(iPod|iPhone|iPad|BlackBerry|Windows Phone|iemobile)/));
-        if (isMobile) {
-          var viewport = document.querySelector("meta[name=viewport]");
-          viewport.setAttribute('content', 'initial-scale=1.0, user-scalable=no');
-        }
-        var mapDiv = document.getElementById('googft-mapCanvas');
-        mapDiv.style.width = isMobile ? '100%' : '500px';
-        mapDiv.style.height = isMobile ? '100%' : '300px';
-        var map = new google.maps.Map(mapDiv, {
-          center: new google.maps.LatLng(53.31424702330468, -6.419693859375002),
-          zoom: 8,
-          mapTypeId: google.maps.MapTypeId.ROADMAP
-        });
-
-        layer = new google.maps.FusionTablesLayer({
-          map: map,
-          heatmap: { enabled: false },
-          query: {
-            select: "col1",
-            from: "1WZkzM2NWeY_1KvLfUkibDJCl63IJBXcvYg6AWRGM",
-            where: ""
-          },
-          options: {
-            styleId: 2,
-            templateId: 2
-          }
-        });
-
-        if (isMobile) {
-          var legend = document.getElementById('googft-legend');
-          var legendOpenButton = document.getElementById('googft-legend-open');
-          var legendCloseButton = document.getElementById('googft-legend-close');
-          legend.style.display = 'none';
-          legendOpenButton.style.display = 'block';
-          legendCloseButton.style.display = 'block';
-          legendOpenButton.onclick = function() {
-            legend.style.display = 'block';
-            legendOpenButton.style.display = 'none';
-          }
-          legendCloseButton.onclick = function() {
-            legend.style.display = 'none';
-            legendOpenButton.style.display = 'block';
-          }
-        }
-      }
-
-      google.maps.event.addDomListener(window, 'load', initialize);
-    </script>
+    <script src="js/fusiontable.js"></script>
 
 </head>
 
@@ -176,7 +111,7 @@
                         <strong>Live Register Bis</strong>
                     </h2>
                     <hr>
-                    <iframe width="500" height="300" scrolling="no" frameborder="no" src="https://fusiontables.google.com/embedviz?q=select+col1+from+1WZkzM2NWeY_1KvLfUkibDJCl63IJBXcvYg6AWRGM+where+col5+%3E%3D+3000+and+col5+%3C%3D+4000&amp;viz=MAP&amp;h=false&amp;lat=53.71924796651665&amp;lng=-6.199967296875002&amp;t=1&amp;z=7&amp;l=col1&amp;y=2&amp;tmplt=2&amp;hml=ONE_COL_LAT_LNG"></iframe>
+                    <center><iframe width="700" height="500" scrolling="no" frameborder="no" src="https://fusiontables.google.com/embedviz?q=select+col1+from+1WZkzM2NWeY_1KvLfUkibDJCl63IJBXcvYg6AWRGM+where+col5+%3E%3D+3000+and+col5+%3C%3D+4000&amp;viz=MAP&amp;h=false&amp;lat=53.71924796651665&amp;lng=-6.199967296875002&amp;t=1&amp;z=7&amp;l=col1&amp;y=2&amp;tmplt=2&amp;hml=ONE_COL_LAT_LNG"></iframe></center>
                </div>
             </div>
         </div>
@@ -194,13 +129,52 @@
                             <div class="form-group col-lg-4">
                                 <label>Name</label>
                                 <input type="text" class="form-control">
-                            </div>
+                            </div>                            
                             <div class="form-group col-lg-12">
                                 <input type="hidden" name="save" value="contact">
                                 <button type="submit" class="btn btn-default">Submit</button>
                             </div>
                         </div>
                     </form>
+                    <div class="dropdown">
+                      <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                        Year
+                        <span class="caret"></span>
+                      </button>
+                      <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                        <li><a href="#">All</a></li>  
+                        <li><a href="#">2016</a></li>
+                        <li><a href="#">2015</a></li>
+                        <li><a href="#">2014</a></li>
+                        <li><a href="#">2013</a></li>
+                        <li><a href="#">2012</a></li>
+                        <li><a href="#">2011</a></li>
+                        <li><a href="#">2010</a></li>
+                        <li><a href="#">2009</a></li>
+                        <li><a href="#">2008</a></li>                                
+                      </ul>
+                    </div>
+                    <div class="dropdown">
+                      <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                        Month
+                        <span class="caret"></span>
+                      </button>
+                      <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                        <li><a href="#">All</a></li>  
+                        <li><a href="#">January</a></li>
+                        <li><a href="#">February</a></li>
+                        <li><a href="#">March</a></li>
+                        <li><a href="#">April</a></li>
+                        <li><a href="#">May</a></li>
+                        <li><a href="#">June</a></li>
+                        <li><a href="#">July</a></li>
+                        <li><a href="#">August</a></li>
+                        <li><a href="#">September</a></li> 
+                        <li><a href="#">October</a></li>
+                        <li><a href="#">November</a></li>
+                        <li><a href="#">December</a></li>  
+                      </ul>
+                    </div>
                 </div>
             </div>
         </div>
