--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
                         <strong>Datasets</strong>
                     </h2>
                     <hr>
+                    <div id="chart"></div>
                 </div>
             </div>
         </div>
